# src/core/types/find-all-options.ts
@@ -1,0 +1,9 @@
+export interface FindAllOptions {
+  page?: number;
+  pageSize?: number;
+  filterQuery?: string;
+  filterByOrQuery?: string;
+  searchQuery?: string;
+  sortQuery?: string;
+  unpaginated?: boolean;
+}
